# self-balance-rust

./: README.md
cad/: Body.stl  Garage.stl  Holder.stl  Lid.stl
firmware/: Cargo.toml  README  sim.py
firmware/src/: lib.rs
